--- a/index.html
+++ b/index.html
@@ -186,61 +186,150 @@
         </p>
 
         <button class="collapsible"> 
-          <h3> Test 1 </h3>
+          <h3> Microsoft Office </h3>
         </button>
           <div class="collapsiblecontent">
-            <h4> LEVEL </h4>
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
-              Test
+              Excel
               <br>
               <br>
-              Test
+              PowerPoint
               <br>
-              Test
+              <br>
+              Word
+              <br>
+              <br>
+              VBA
             </p>
           </div>
-          <button class="collapsible"> 
-          <h3> Test 2 </h3>
+
+        <button class="collapsible"> 
+          <h3> Languages </h3>
         </button>
           <div class="collapsiblecontent">
-            <h4> LEVEL </h4>
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
-              Test
+              French
               <br>
               <br>
-              Test
+              English
               <br>
-              Test
+              <br>
+              Spanish
+              <br>
+              <br>
+              Portuguese
+              <br>
+              <br>
+              Italian
+              <br>
+              <br>
+              Russian
             </p>
           </div>
-          <button class="collapsible"> 
-          <h3> Test 3 </h3>
+
+        <button class="collapsible"> 
+          <h3> HTML </h3>
         </button>
           <div class="collapsiblecontent">
-            <h4> LEVEL </h4>
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
-              Test
-              <br>
-              <br>
-              Test
-              <br>
-              Test
+              Aspiring ---------------------
             </p>
-          </div>
-          <button class="collapsible"> 
-          <h3> Test 4 </h3>
+          </div> 
+
+        <button class="collapsible"> 
+          <h3> JavaScript </h3>
         </button>
           <div class="collapsiblecontent">
-            <h4> LEVEL </h4>
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
-              Test
-              <br>
-              <br>
-              Test
-              <br>
-              Test
+              Aspiring
+            </p>
+          </div> 
+
+        <button class="collapsible"> 
+          <h3> Python </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              Intermediate
             </p>
           </div>
+
+        <button class="collapsible"> 
+          <h3> Python Packages </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              NumPy
+              <br>
+              <br>
+              Pandas
+              <br>
+              <br>
+              SciPy
+              <br>
+              <br>
+              Matplotlib
+              <br>
+              <br>
+              Seaborn
+              <br>
+              <br>
+              Scikit-learn
+              <br>
+              <br>
+              Statsmodels
+            </p>
+          </div>
+
+        <button class="collapsible"> 
+          <h3> SQL </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              Advanced
+            </p>
+          </div>
+
+        <button class="collapsible"> 
+          <h3> C++ </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              Intermediate
+            </p>
+          </div>
+
+        <button class="collapsible"> 
+          <h3> R/Rstudio </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              Intermediate
+            </p>
+          </div>
+
+        <button class="collapsible"> 
+          <h3> Matlab </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              Intermediate
+            </p>
+          </div>
+
+
+
+
         </div>
 
 
