--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <br>
           </p>
 
+         <div class="flex-container"> 
           <button class="collapsible">
             <img src = "assets/images/OctaneXtechlogo.png" style="max-width:60%"/>
           </button>
@@ -171,6 +172,7 @@
             <p>As a Data Analytics Intern, my role included database creation and management, product design and development, and data analytics.
             </p>
           </div>
+         </div> 
         </div>
 
 
@@ -184,25 +186,6 @@
           <p class="main">
           Here is an organized list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-
-        <button class="collapsible"> 
-          <h3> Microsoft Office </h3>
-        </button>
-          <div class="collapsiblecontent">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
-              Excel
-              <br>
-              <br>
-              PowerPoint
-              <br>
-              <br>
-              Word
-              <br>
-              <br>
-              VBA
-            </p>
-          </div>
 
         <button class="collapsible"> 
           <h3> Languages </h3>
@@ -226,6 +209,25 @@
               <br>
               <br>
               Russian
+            </p>
+          </div>
+          
+        <button class="collapsible"> 
+          <h3> Microsoft Office </h3>
+        </button>
+          <div class="collapsiblecontent">
+            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
+            <p>
+              Excel
+              <br>
+              <br>
+              PowerPoint
+              <br>
+              <br>
+              Word
+              <br>
+              <br>
+              VBA
             </p>
           </div>
 
