--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <button class="collapsible"> 
           <h3> Languages </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: lightgrey;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               French
