--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
         <button class="collapsible"> 
           <h3> Languages </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: lightgrey; padding-bottom: 5%;">
+          <div class="collapsiblecontent" style="background-color: lightgrey;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 5%;">
               French
               <br>
               <br>
