--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: lightgrey;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 5%;">
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               French
               <br>
               <br>
