--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <button class="collapsible"> 
           <h3> Languages </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #e6e4e2;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               French
