--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <button class="collapsible"> 
           <h3> Microsoft Office </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Excel
@@ -233,7 +233,7 @@
         <button class="collapsible"> 
           <h3> HTML </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Aspiring ---------------------
@@ -243,7 +243,7 @@
         <button class="collapsible"> 
           <h3> JavaScript </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Aspiring
@@ -253,7 +253,7 @@
         <button class="collapsible"> 
           <h3> Python </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Intermediate
@@ -263,7 +263,7 @@
         <button class="collapsible"> 
           <h3> Python Packages </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               NumPy
@@ -291,7 +291,7 @@
         <button class="collapsible"> 
           <h3> SQL </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Advanced
@@ -301,7 +301,7 @@
         <button class="collapsible"> 
           <h3> C++ </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Intermediate
@@ -311,7 +311,7 @@
         <button class="collapsible"> 
           <h3> R/Rstudio </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Intermediate
@@ -321,7 +321,7 @@
         <button class="collapsible"> 
           <h3> Matlab </h3>
         </button>
-          <div class="collapsiblecontent">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p>
               Intermediate
