--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <div id="Skills" class="tabcontent">
           <p class="main">
-          Here is an organized list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
+          Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
 
         <button class="collapsible"> 
@@ -216,7 +216,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Excel
               <br>
               <br>
@@ -235,7 +235,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Aspiring ---------------------
             </p>
           </div> 
@@ -245,7 +245,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Aspiring
             </p>
           </div> 
@@ -255,7 +255,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
             </p>
           </div>
@@ -265,7 +265,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               NumPy
               <br>
               <br>
@@ -293,7 +293,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Advanced
             </p>
           </div>
@@ -303,7 +303,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
             </p>
           </div>
@@ -313,7 +313,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
             </p>
           </div>
@@ -323,7 +323,7 @@
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p>
+            <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
             </p>
           </div>
