--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-
+        <div class="flex-container">
         <button class="collapsible"> 
           <h3> Languages </h3>
         </button>
@@ -333,7 +333,7 @@
 
 
 
-
+        </div>
         </div>
 
 
