--- a/index.html
+++ b/index.html
@@ -179,15 +179,11 @@
 
 
 
-
-
-
-
         <div id="Skills" class="tabcontent">
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-        <div class="flex-container">
+        <div class="flex-container" style="display:block;">
         <button class="collapsible"> 
           <h3> Languages </h3>
         </button>
