--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-        <div class="flex-container" style="display:inline-block;">
-        <button class="collapsible"> 
+        <div class="flex-container">
+        <button class="collapsible" style="width:auto;"> 
           <h3> Languages </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
