--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> Microsoft Office </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -229,7 +229,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> Python </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -239,7 +239,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> Python Packages </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -267,7 +267,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> HTML </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -277,7 +277,7 @@
             </p>
           </div> 
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> JavaScript </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -287,7 +287,7 @@
             </p>
           </div> 
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> SQL </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -297,7 +297,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> C++ </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -307,7 +307,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> R/Rstudio </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -317,7 +317,7 @@
             </p>
           </div>
 
-        <button class="collapsible"> 
+        <button class="collapsible" style="width:auto;"> 
           <h3> Matlab </h3>
         </button>
           <div class="collapsiblecontent" style="background-color: #f1f1f1;">
@@ -326,9 +326,7 @@
               Intermediate
             </p>
           </div>
-
-
-
+          
         </div>
         </div>
 
