--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-        <div class="flex-container" style="flex-direction:row;">
+        <div class="flex-container" style="flex-direction:row; width:50%;">
         <button class="collapsible" style="width:auto;"> 
           <h3> Languages </h3>
         </button>
