--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-        <div class="flex-container" style="flex-direction:row; flex-flow: column wrap;">
+        <div class="flex-container" style="width:42%; flex-flow: row wrap;">
         <button class="collapsible" style="width:auto;"> 
           <h3> Languages </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:105%;">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               French
