--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-        <div class="flex-container" style="width:50%;">
+        <div class="flex-container" style="width:50%; flex-flow: row wrap;">
         <button class="collapsible" style="width:auto;"> 
           <h3> Languages </h3>
         </button>
@@ -213,7 +213,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> Microsoft Office </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Excel
@@ -232,7 +232,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> Python </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
@@ -242,7 +242,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> Python Packages </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               NumPy
@@ -270,7 +270,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> HTML </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Aspiring ---------------------
@@ -280,7 +280,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> JavaScript </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Aspiring
@@ -290,7 +290,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> SQL </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Advanced
@@ -300,7 +300,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> C++ </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
@@ -310,7 +310,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> R/Rstudio </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
@@ -320,7 +320,7 @@
         <button class="collapsible" style="width:auto;"> 
           <h3> Matlab </h3>
         </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1;">
+          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
             <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
             <p style="padding-bottom: 3%; padding-left: 3%;">
               Intermediate
