--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
   <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
   <button class="tablinks" onclick="openTab(event, 'Skills')">Skills</button>
+  <button class="tablinks" onclick="openTab(event, 'Skills2')">Skills2</button>
   <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
 </div>
 
@@ -329,6 +330,23 @@
 
         </div>
         </div>
+
+
+
+
+
+
+
+        <div id="Skills2" class="tabcontent">
+          <p> This is a testing ground for displaying skills through tabs </p>
+          
+
+
+        </div>
+
+
+
+
 
 
         <div id="Projects" class="tabcontent">
