--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="imgBx">
                 <img src = "assets/images/FVhslogo.png">
               </div>
-              <div class = "content" style = "margin-top:-16%;">
+              <div class = "content">
                 <h3 style = "margin-top:-18%;"> Fairview High School </h3>
                 <p> 
                   Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
@@ -339,7 +339,7 @@
 
         <div id="Skills2" class="tabcontent">
           <p> This is a testing ground for displaying skills through tabs </p>
-          
+
 
 
         </div>
