--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <h3> High School Education </h3>
             <div class="box">
               <div class="imgBx">
-                <img src = "assets/images/FVhslogo.png">
+                <img src = "assets/images/FVhslogo.png" style="margin-bottom: 4%">
               </div>
-              <div class = "content">
+              <div class = "content" style = "margin-top:-16%;">
                 <h3 style = "margin-top:-18%;"> Fairview High School </h3>
                 <p> 
                   Located in Southern Boulder, Colorado, I spent the rest of my senior year at this exceptional school. 
