--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h3> High School Education </h3>
             <div class="box">
               <div class="imgBx">
-                <img src = "assets/images/FVhslogo.png" style="margin-bottom: 4%">
+                <img src = "assets/images/FVhslogo.png" style="padding-bottom: 4%; padding-top:4%;">
               </div>
               <div class = "content" style = "margin-top:-16%;">
                 <h3 style = "margin-top:-18%;"> Fairview High School </h3>
@@ -338,9 +338,9 @@
 
 
         <div id="Skills2" class="tabcontent">
-          <p> This is a testing ground for displaying skills through tabs </p>
-
-
+          <div class="flex-container">
+            <p> This is a testing ground for displaying skills through tabs </p>
+          </div>
 
         </div>
 
