--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h3> High School Education </h3>
             <div class="box">
               <div class="imgBx">
-                <img src = "assets/images/FVhslogo.png" style="padding-bottom: 4%; padding-top:4%;">
+                <img src = "assets/images/FVhslogo.png" style="margin-bottom: 10%">
               </div>
               <div class = "content" style = "margin-top:-16%;">
                 <h3 style = "margin-top:-18%;"> Fairview High School </h3>
