--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br> Occasional Programmer, Artist, Video Game Enthusiast
       </h2>
 
-<div class="tab">
+<div class="tab" id="navbar">
   <button class="tablinks" onclick="openTab(event, 'About Me')" id="defaultOpen">About Me</button>
   <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
   <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
@@ -391,6 +391,18 @@
           } 
         });
         }
+
+        var navbar = document.getElementById("navbar");
+        var sticky = navbar.offsetTop;
+
+        function myFunction() {
+          if (window.pageYOffset >= sticky) {
+            navbar.classList.add("sticky")
+          } else {
+            navbar.classList.remove("sticky");
+          }
+        }
+
         </script>
     </body>
     
