--- a/index.html
+++ b/index.html
@@ -392,6 +392,8 @@
         });
         }
 
+        window.onscroll = function() {myFunction()};
+
         var navbar = document.getElementById("navbar");
         var sticky = navbar.offsetTop;
 
