--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <button class="tablinks" onclick="openTab(event, 'Work')">Work</button>
   <button class="tablinks" onclick="openTab(event, 'Education')">Education</button>
   <button class="tablinks" onclick="openTab(event, 'Skills')">Skills</button>
-  <button class="tablinks" onclick="openTab(event, 'Skills2')">Skills2</button>
   <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
 </div>
 
@@ -184,165 +183,147 @@
           <p class="main">
           Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
         </p>
-        <div class="flex-container" style="width:50%; ">
-        <button class="collapsible" style="width:auto;"> 
-          <h3> Languages </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%;">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              French
-              <br>
-              <br>
-              English
-              <br>
-              <br>
-              Spanish
-              <br>
-              <br>
-              Portuguese
-              <br>
-              <br>
-              Italian
-              <br>
-              <br>
-              Russian
-
-            </p>
+          <div class="container">
+            <div class="icon">
+                <div class="iconBx active" data-id = "content1">
+                <h3> Languages </h3>
+                  </div>
+              </div>
+            <div class="icon">
+                <div class="iconBx" data-id = "content2">
+                <h3> Microsoft Office </h3>
+                  </div>
+              </div>
+            <div class="icon">
+                <div class="iconBx" data-id = "content3">
+                <h3> Python </h3>
+                  </div>
+              </div>
+              <div class="icon">
+                <div class="iconBx" data-id = "content4">
+                <h3> Python Packages </h3>
+                  </div>
+              </div>
+                  <div class="icon">
+                <div class="iconBx" data-id = "content5">
+                <h3> Web Development </h3>
+                  </div>
+              </div>
+                  <div class="icon">
+                <div class="iconBx" data-id = "content6">
+                <h3> SQL </h3>
+                  </div>
+              </div>
+                  <div class="icon">
+                <div class="iconBx" data-id = "content7">
+                <h3> C++ </h3>
+                  </div>
+              </div>
+                  <div class="icon">
+                <div class="iconBx" data-id = "content8">
+                <h3> R/Rstudio </h3>
+                  </div>
+              </div>
+                  <div class="icon">
+                <div class="iconBx" data-id = "content9">
+                <h3> Matlab </h3>
+                  </div>
+              </div>
           </div>
 
-        <button class="collapsible" style="width:auto;"> 
-          <h3> Microsoft Office </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Excel
-              <br>
-              <br>
-              PowerPoint
-              <br>
-              <br>
-              Word
-              <br>
-              <br>
-              VBA
-            </p>
+          <div class="content">
+            <div class="contentBx active" id="content1">
+                <div>
+                    <div class="Text">
+                        <h2> Languages </h2>
+                          <h3> LEVEL <br> BEGINNER-ASPIRING-INTERMEDIATE-ADVANCED-EXPERT</h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content2">
+                <div>
+                    <div class="Text">
+                        <h3> Test2 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content3">
+                <div>
+                    <div class="Text">
+                        <h3> Test3 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content4">
+                <div>
+                    <div class="Text">
+                        <h3> Test4 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content5">
+                <div>
+                    <div class="Text">
+                        <h3> Test5 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content6">
+                <div>
+                    <div class="Text">
+                        <h3> Test6 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content7">
+                <div>
+                    <div class="Text">
+                        <h3> Test7 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content8">
+                <div>
+                    <div class="Text">
+                        <h3> Test8 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+              <div class="contentBx" id="content9">
+                <div>
+                    <div class="Text">
+                        <h3> Test9 </h3>
+                          <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+                      </div>
+                  </div>
+              </div>
           </div>
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> Python </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Intermediate
-            </p>
-          </div>
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> Python Packages </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              NumPy
-              <br>
-              <br>
-              Pandas
-              <br>
-              <br>
-              SciPy
-              <br>
-              <br>
-              Matplotlib
-              <br>
-              <br>
-              Seaborn
-              <br>
-              <br>
-              Scikit-learn
-              <br>
-              <br>
-              Statsmodels
-            </p>
-          </div>
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> HTML </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Aspiring ---------------------
-            </p>
-          </div> 
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> JavaScript </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Aspiring
-            </p>
-          </div> 
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> SQL </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Advanced
-            </p>
-          </div>
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> C++ </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Intermediate
-            </p>
-          </div>
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> R/Rstudio </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Intermediate
-            </p>
-          </div>
-
-        <button class="collapsible" style="width:auto;"> 
-          <h3> Matlab </h3>
-        </button>
-          <div class="collapsiblecontent" style="background-color: #f1f1f1; width:100%">
-            <h4> LEVEL <br>  Beginner - Aspiring - Intermediate - Advanced - Expert </h4>
-            <p style="padding-bottom: 3%; padding-left: 3%;">
-              Intermediate
-            </p>
-          </div>
-
-        </div>
-        </div>
-
-
-
-
-
-
-
-        <div id="Skills2" class="tabcontent">
-          <div class="flex-container">
-            <p> This is a testing ground for displaying skills through tabs </p>
-          </div>
-
-        </div>
 
 
 
@@ -403,6 +384,24 @@
           } else {
             navbar.classList.remove("sticky");
           }
+        }
+
+
+        var iconBx = document.querySelectorAll('.iconBx');
+        var contentBx = document.querySelectorAll('.contentBx');
+
+        for (var i=0; i<iconBx.length; i++) {
+          iconBx[i].addEventListener('mouseover', function(){
+              for (var i=0; i<contentBx.length; i++){
+                  contentBx[i].className='contentBx';
+                }
+                document.getElementById(this.dataset.id).className = 'contentBx active'
+                
+                for (var i=0; i<iconBx.length; i++){
+                  iconBx[i].className='iconBx';
+                }
+                this.className = 'iconBx active';
+            })
         }
 
         </script>
