--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <button class="tablinks" onclick="openTab(event, 'Projects')">Projects</button>
 </div>
 
+<footer> </footer>
+
 <div id="About Me" class="tabcontent">
   <h3 style = "left:50%; text-align: center;">
     <img style= "text-align:center; max-width: 12%; height: auto" src="assets/images/ProPic2.png" />
