--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@
                       </div>
                   </div>
               </div>
-              <footer> </footer>
           </div>
+          <footer> </footer>
+        </div>
 
 
 
