--- a/index.html
+++ b/index.html
@@ -183,9 +183,6 @@
 
 
         <div id="Skills" class="tabcontent">
-          <p class="main">
-          Here is a poorly designed list of my skills and in what capacity I am familiar with them, as well as the level of proficiency I have in these domains.
-        </p>
           <div class="container">
             <div class="icon">
                 <div class="iconBx active" data-id = "content1">
@@ -327,7 +324,7 @@
                   </div>
               </div>
           </div>
-          <footer> </footer>
+          <footer> ahhhh </footer>
         </div>
 
 
@@ -411,6 +408,7 @@
         }
 
         </script>
+        <footer> </footer>
     </body>
     
 </html>
