--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h3> Certificates </h3>
       <div class="box">
         <div class="imgBx">
-          <img src = "assets/images/IBMlogo.png" style="margin-top:14%;">
+          <img src = "assets/images/IBMlogo.png">
         </div>
         <div class = "content">
           <h3> 
