--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
                   </div>
               </div>
                   <div class="icon">
-                <div class="iconBx" data-id = "content6">
+                <div class="iconBx" style="width:8%;" data-id = "content6">
                 <h3> SQL </h3>
                   </div>
               </div>
                   <div class="icon">
-                <div class="iconBx" data-id = "content7">
+                <div class="iconBx" style="width:8%" data-id = "content7">
                 <h3> C++ </h3>
                   </div>
               </div>
