--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" id="content2">
+              <div class="contentBx" style="position:absolute;" id="content2">
                 <div>
                     <div class="Text">
                         <h3> Test2 </h3>
