--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </div>
 
           <div class="content">
-            <div class="contentBx active" id="content1">
+            <div class="contentBx active" style="position:absolute;" id="content1">
                 <div>
                     <div class="Text">
                         <h2> Languages </h2>
