--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content9">
+              <div class="contentBx" id="content9">
                 <div>
                     <div class="Text">
                         <h3> Test9 </h3>
