--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </div>
 
           <div class="content">
-            <div class="contentBx active" style="position:absolute;" id="content1">
+            <div class="contentBx active" id="content1">
                 <div>
                     <div class="Text">
                         <h2> Languages </h2>
@@ -239,7 +239,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content2">
+              <div class="contentBx"  id="content2">
                 <div>
                     <div class="Text">
                         <h3> Test2 </h3>
@@ -249,7 +249,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content3">
+              <div class="contentBx" id="content3">
                 <div>
                     <div class="Text">
                         <h3> Test3 </h3>
@@ -259,7 +259,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content4">
+              <div class="contentBx" id="content4">
                 <div>
                     <div class="Text">
                         <h3> Test4 </h3>
@@ -269,7 +269,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content5">
+              <div class="contentBx" id="content5">
                 <div>
                     <div class="Text">
                         <h3> Test5 </h3>
@@ -279,7 +279,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content6">
+              <div class="contentBx" id="content6">
                 <div>
                     <div class="Text">
                         <h3> Test6 </h3>
@@ -289,7 +289,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content7">
+              <div class="contentBx" id="content7">
                 <div>
                     <div class="Text">
                         <h3> Test7 </h3>
@@ -299,7 +299,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" style="position:absolute;" id="content8">
+              <div class="contentBx" id="content8">
                 <div>
                     <div class="Text">
                         <h3> Test8 </h3>
@@ -309,7 +309,7 @@
                       </div>
                   </div>
               </div>
-              <div class="contentBx" id="content9">
+              <div class="contentBx" style="position:relative;" id="content9">
                 <div>
                     <div class="Text">
                         <h3> Test9 </h3>
