--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 
 
-        <div id="Skills" class="tabcontent">
+        <div id="Skills" class="tabcontent" style="margin-bottom:150px;">
           <div class="container">
             <div class="icon">
                 <div class="iconBx active" data-id = "content1">
