--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <img src = "assets/images/CUBoulderlogo1.png">
               </div>
               <div class = "content">
-                <h3> University of Colorado, Boulder - College of Arts & Sciences </h3>
+                <h3> University of Colorado, Boulder   College of Arts & Sciences </h3>
                 <p> Bachelor of Arts in Mathematics, Concentration in Applicability and Statistics & French Minor 
                 <br>
                 <br>
