--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
       <h2> 
         Data Analyst & Scientist
-        <br> Occasional Programmer, Artist, Video Game Enthusiast
+        <br> Programmer, Artist, Video Game Enthusiast
       </h2>
 
 <div class="tab" id="navbar">
@@ -328,6 +328,7 @@
 
 
         <div id="Projects" class="tabcontent">
+          <h1> COMING SOON!! </h1>
           <p class="main">
           This is where I will post past, present, and future projects I am working on. This is my most fun tab where I have all the fun fun fun FUN FUN!
         </p>
