--- a/index.html
+++ b/index.html
@@ -343,9 +343,8 @@
 
 
         <div id="Projects" class="tabcontent">
-          <h1> COMING SOON!! </h1>
+          <h1> COMING SOON! </h1>
           <p class="main">
-          This is where I will post past, present, and future projects I am working on. This is my most fun tab where I have all the fun fun fun FUN FUN!
         </p>
         </div>
 
